# PicoNote

./: .gitignore  Cargo.toml  README.md  build.rs
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
docs/: PLAN.md  markdown.md
icons/: PicoNote.icns
repo/: PicoNoteBanner.psd
scripts/: generate-licenses.py  patch-macos-plist.sh
src/: app.rs  config.rs  file_ops.rs  highlighter.rs  macos_open.rs  main.rs  parser.rs  theme.rs
