[package]
name = "piconote"
version = "0.1.0"
edition = "2024"
description = "A super lightweight markdown notepad"

[dependencies]
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts",
    "glow",
] }

image = { version = "0.25", default-features = false, features = ["png"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
confy = "0.6"
font-kit = "0.14"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
panic = "abort"
