[package]
name = "piconote"
version = "0.1.0"
edition = "2024"
description = "A super lightweight markdown notepad"

[dependencies]
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts",
    "glow",
] }

image = { version = "0.25", default-features = false, features = ["png"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
confy = "0.6"
font-kit = "0.14"

[package.metadata.bundle]
name = "PicoNote"
identifier = "com.piconote.app"
icon = [
    "icons/PicoNote.icns",
    "icons/icon_512.png",
    "icons/icon_256.png",
    "icons/icon_128.png",
    "icons/icon_64.png",
    "icons/icon_48.png",
    "icons/icon_32.png",
    "icons/icon_16.png",
]
version = "0.1.0"
copyright = "Copyright (c) 2026 PicoNote"
category = "public.app-category.productivity"
short_description = "A super lightweight markdown notepad"
deb_depends = ["libxcb1", "libxkbcommon0", "libgtk-3-0"]
linux_use_terminal = false

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
panic = "abort"
